--- a/app/views/allocations/_case_information.html.erb
+++ b/app/views/allocations/_case_information.html.erb
@@ -40,5 +40,14 @@
       <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
     </td>
   </tr>
+  <% if @prisoner.indeterminate_sentence? %>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Parole Review date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.parole_review_date, replacement: 'Unknown') %>
+        <%= link_to 'Update', prison_edit_prd_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
+      </td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
