--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -34,7 +34,7 @@ time left to serve into account.</p>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= working_pattern_name(pom.working_pattern) %></td>
       <td aria-label="Action" class="govuk-table__cell table_cell__left_align">
-      <%= link_to "Allocate", prison_confirm_allocation_path(@prison, @prisoner.offender_no, pom.staff_id, page: params[:page]), class: "govuk-link" %>
+      <%= link_to "Allocate", prison_confirm_allocation_path(@prison, @prisoner.offender_no, pom.staff_id, sort: params[:sort], page: params[:page]), class: "govuk-link" %>
       </td>
     </tr>
   <% end %>
@@ -83,7 +83,7 @@ time left to serve into account.</p>
           <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
           <td aria-label="Working pattern" class="govuk-table__cell"><%= working_pattern_name(pom.working_pattern) %></td>
           <td aria-label="Action" class="govuk-table__cell table_cell__right_align">
-          <%= link_to "Allocate", new_prison_overrides_path(@prison, @prisoner.offender_no, pom.staff_id, page: params[:page]), class: "govuk-link" %>
+          <%= link_to "Allocate", new_prison_overrides_path(@prison, @prisoner.offender_no, pom.staff_id, sort: params[:sort], page: params[:page]), class: "govuk-link" %>
           </td>
         </tr>
       <% end %>
