--- a/app/views/prisoners/show.html.erb
+++ b/app/views/prisoners/show.html.erb
@@ -59,4 +59,4 @@
 <%= render 'prisoner_information'%>
 <%= render partial: 'shared/offence_info', locals: { editable_prd: true}  %>
 <%= render 'prison_allocation' %>
-<%= render 'community_information' %>
+<%= render partial: 'shared/community_information', locals: { editable: false} %>
